--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="vue-damage-calculator"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
